# dnz

./: .gitignore  .gitmodules  CHANGELOG.md  CONDUCTOR.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  SOURCE_ARCHIVE_CARD.md  deny.toml  findings.md  git_commit_workflow.ps1  package.json  pixi.toml  progress.md  subagents.yaml  task_plan.md
.githooks/: pre-commit
.github/workflows/: ci-learning-candidates.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  hardening.yml  hf_metadata.yml  release.yml  rnz_archive.yml  rnz_model_access.yml  rnz_review.yml  rnz_zenodo_monthly.yml  scorecard.yml  zenodo_publish.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
conductor/: README.md  code-styleguides.md  improvement-backlog.md  index.md  learning-log.md  manifest.yaml  product-guidelines.md  product.md  publication-plan.md  setup_state.json  state.yaml  tech-stack.md  tracks.md  workflow.md
conductor/archive/: T00-bootstrap-baseline.md  T01-transport-auth-errors.md
conductor/archive/digitalnz-handoff-notification-20260707/: handoff.md  metadata.json  spec.md
conductor/archive/live-registry-submission-20260705/: index.md  retrospective.md
conductor/archive/persistent-cache-advanced-features/: index.md  plan.md
conductor/archive/repo-alignment-security-archive-20260707/: index.md  metadata.json  plan.md  retrospective.md
conductor/archive/source-archive-expansion-20260709/: index.md  metadata.json  plan.md  retrospective.md  spec.md
conductor/archive/submission-convergence-loop-20260707/: index.md  metadata.json  plan.md  retrospective.md  spec.md
conductor/contracts/: digitalnz-v3.yaml
conductor/evidence/: 2026-07-13-baseline.md  2026-07-13-t01-t06-slice.md  2026-07-14-t01-t02-executable-gate.md  2026-07-14-t03-endpoints-models.md  2026-07-14-t04-cli-parity.md  2026-07-14-t04-mcp-parity.md  2026-07-14-t04-python-parity.md  2026-07-14-t05-pydnz-compatibility.md  2026-07-15-t07-page-stream.md  2026-07-15-t08-export-jsonl.md  2026-07-15-t09-evidence-pack.md  2026-07-16-t10-hardening.md
conductor/templates/: learning-entry.schema.json  registry-submission-workflow.md  track-improvement-template.md
conductor/tracks/: T01-transport-auth-errors.md  T02-search-contract.md  T03-endpoints-models.md  T04-surface-parity.md  T05-pydnz-compat.md  T06-correctness-debt.md  T07-stream-cache-harvest-sync.md  T08-export-quality-rights.md  T09-research-rag-search.md  T10-ci-security-release.md
conductor/tracks/agentic-query-autopilot/: index.md  plan.md  spec.md
conductor/tracks/api-docs-collection-map-20260707/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/cli-implementation/: index.md  plan.md  spec.md
conductor/tracks/core-api-client/: index.md  plan.md  spec.md
conductor/tracks/digitalnz-handoff-notification-20260707/: index.md  metadata.json  plan.md
conductor/tracks/digitalnz_dataset_registry_readiness_20260721/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/hardening-coverage-registry-submission/: index.md  plan.md  spec.md
conductor/tracks/live-registry-submission-20260705/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/mcp-server-features/: index.md  plan.md  spec.md
conductor/tracks/open-science-export/: index.md  plan.md  spec.md
conductor/tracks/open-social-data-provider-contract-20260705/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/packaging-and-registry-submission/: index.md  plan.md  spec.md
conductor/tracks/performance-profiling-and-hardening/: index.md  plan.md  spec.md
conductor/tracks/persistent-cache-advanced-features/: plan.md  spec.md
conductor/tracks/power-bi-semantic-model-integration/: index.md  plan.md  spec.md
conductor/tracks/python-ffi-bindings/: index.md  plan.md  spec.md
conductor/tracks/rag-context-digests/: index.md  plan.md  spec.md
conductor/tracks/repo-alignment-security-archive-20260707/: index.md  metadata.json  plan.md  spec.md
crates/dnz-cli/: Cargo.toml
crates/dnz-cli/src/: lib.rs  main.rs
crates/dnz-cli/tests/: cli_tests.rs
crates/dnz-core/: Cargo.toml
crates/dnz-core/benches/: benchmarks.rs
crates/dnz-core/src/: autopilot.rs  cache.rs  client.rs  dataframe.rs  digest.rs  errors.rs  evidence.rs  export.rs  lib.rs  models.rs  parquet.rs  quality.rs  research.rs  sync.rs  vector.rs
crates/dnz-core/tests/: client_tests.rs  property_tests.rs
crates/dnz-core/tests/fixtures/: digitalnz-search.rss
crates/dnz-mcp/: Cargo.toml  mcp-manifest.json
crates/dnz-mcp/src/: main.rs
crates/dnz-python/: Cargo.toml  pyproject.toml
crates/dnz-python/python/dnz/: __init__.py  api.py
crates/dnz-python/python/tests/: test_api.py
crates/dnz-python/src/: lib.rs
docs/: astro.config.mjs  package-lock.json  package.json  registry-readiness.md
powerbi/semantic-model/: README.md
registry/: README.md
registry/github-mcp/: README.md
registry/glama/: README.md
registry/mcp/: server.draft.json
registry/mcpb/: manifest.template.json
registry/smithery/: README.md  config.schema.json
rnz/: README.md  analysis.schema.json  archive-policy.json  audio-quality.schema.json  collections.csv  enrichment.schema.json  evaluation-fixtures.json  evaluation-report.schema.json  lexical-resources.json  manifest.schema.json  maori-governance.md  pilot-report.schema.json  recordings.md  review-event.schema.json  review.schema.json  transcription-requirements.in  transcription-requirements.txt  usage_by_collection_and_partner.csv
scripts/: build-mcpb.ps1  build-python-wheel.ps1  cargo-gnu.cmd  check_code_scanning_alerts.py  check_openapi_drift.py  coverage.ps1  create-release-archive.py  generate_api_docs_inventory.py  invoke-cargo.ps1  live-digitalnz-smoke.ps1  record_submission_event.py  rnz_archive.py  rnz_evaluate.py  tmdl-data-dictionary.ps1  validate-package-metadata.ps1  validate-tmdl.ps1  validate_learning_log.py  verify-cargo-publish-dryruns.ps1  verify-python-wheel.ps1  verify-release-archives.py  workspace-doctor.ps1
tests/: test_check_code_scanning_alerts.py  test_registry_readiness_contract.py  test_rnz_archive.py
(+61 files in other folders)
