[workspace]
resolver = "2"
members = [
    "crates/dnz-core",
    "crates/dnz-cli",
    "crates/dnz-mcp",
    "crates/dnz-python",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wiremock = "0.6"
proptest = "1.4"
nutype = { version = "0.4", features = ["serde"] }
polars = { version = "0.38", features = ["lazy", "parquet"] }
rand = "0.8"
