[workspace]
resolver = "2"
members = [
    "crates/dnz-core",
    "crates/dnz-cli",
    "crates/dnz-mcp",
    "crates/dnz-python",
]

[workspace.package]
rust-version = "1.84"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.41"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
wiremock = "0.6"
proptest = "1.4"
nutype = { version = "0.4", features = ["serde"] }
polars-core = { version = "0.54", default-features = false }
parquet = { version = "56.2", default-features = false, features = ["arrow"] }
arrow-array = "56.2"
arrow-schema = "56.2"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
