[package]
name = "dnz-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for DigitalNZ API"

[dependencies]
dnz-core = { path = "../dnz-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
